# mkdocs_yaml_schema_plugin

./: .gitattributes  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json  setup.cfg  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml  release-please.yml
mkdocs_yaml_schema_plugin/: __init__.py  _version.py  markdown.py  plugin.py
mkdocs_yaml_schema_plugin/.github/: PULL_REQUEST_TEMPLATE.md
mkdocs_yaml_schema_plugin/.github/ISSUE_TEMPLATE/: feature_request.md
tests/: test_markdown.py
tests/fixtures/: sample.schema.yaml
