[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-yaml-schema-plugin"
version = "0.3.0"
description = "MkDocs Plugin to parse yaml schemas."
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [{ name = "Patrik Smeds", email = "patrik.smeds@gmail.com" }]
keywords = ["mkdocs", "plugin", "yaml", "schema"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11, <4"
dependencies = ["mkdocs", "pyyaml"]

[project.urls]
Homepage = "https://github.com/smeds/mkdocs-yaml-schema-plugin"

[project.entry-points."mkdocs.plugins"]
yaml-schema = "mkdocs_yaml_schema_plugin.plugin:YamlSchema"
